カスタムクラスにStateToggleButtonを設定

--- a/stopwatch/Base.lproj/Main.storyboard
+++ b/stopwatch/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="45" translatesAutoresizingMaskIntoConstraints="NO" id="dxC-fF-QCl">
                                 <rect key="frame" x="97.5" y="408" width="219" height="62"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ijy-mJ-kjq">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ijy-mJ-kjq" customClass="StateToggleButton" customModule="stopwatch" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="84" height="62"/>
                                         <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="35"/>
                                         <state key="normal" title="Start">
